<resources>

    <string name="app_name">Xyntax</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Xyntax</string>
    <string name="users">Users</string>
    <string name="presets">Presets</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="dashboard">Dashboard</string>
    <string name="slider">Switching the <b>On/Off</b> slider would Activate/Deactivate each user\'s access to Xyntax.</string>
    <string name="preset_header">Tap on the <b>Button</b> of the Preset you want to activate.</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="vacation">Vacation</string>
    <string name="maintenance">Maintenance</string>
    <string name="security_off">Security Off</string>
    <string name="reset">Reset Xyntax</string>
    <string name="select_location">Select a Location</string>
    <string name="settings2">Select a Xyntax installation you want to connect to. You can click on the       button to edit the settings of an entry.</string>
    <string name="settings3">You may also click the + button to add a new location.</string>
    <string name="settings4">You can use the <b>Reset Xyntax</b> button below to close and restart the Xyntax Application on your phone.</string>
    <string name="edit_location">Edit Location</string>
    <string name="setting_note">Remember that all fields are required.</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save_password">Save Password</string>
    <string name="help_header">Xyntax Mobile Help Page</string>
    <string name="help_1">This is the general help page for using Xyntax Mobile.</string>
    <string name="help_2">These are the general areas of the Xyntax Mobile App.  <b>Click</b> on a button on the left for more detailed help.</string>
    <string name="help_dashboard">This is the <b>Dashboard</b> button for Xyntax. Here you will find quick controls for the different zones and devices available in your installation.</string>
    <string name="help_users">This is the <b>Users</b> button for Xyntax. Here you turn on/off the access of registered users in your system.</string>
    <string name="help_presets">This is the <b>Presets</b> button for Xyntax. You can activate any stored preset in this screen.</string>
    <string name="help_settings">This is the <b>Settings</b> button for Xyntax. You can configure access to your Xyntax System and add other installed Xyntax Systems if you have more than one.</string>
    <string name="help_help">This is the <b>Help</b> button for Xyntax that links to this page.</string>
    <string name="zones">Zones</string>
    <string name="all">All</string>
    <string name="living">Living Room</string>
    <string name="garage">Garage</string>
    <string name="living_room">Living Room Lights</string>
    <string name="garage_lights">Garage Lights</string>
    <string name="kitchen">Kitchen Lights</string>
    <string name="bedroom">Bedroom Lights</string>

</resources>